<resources>
    <string name="app_name">OSCAL</string>
    <string name="main_menu">Main menu</string>
    <string name="close_menu">Close menu</string>
    <string name="last_update">DB last updated: %1$s</string>
    <string name="download_reminder_title">Update</string>
    <string name="download_reminder_message">This will update the schedule database to the latest version. Make sure you are connected to the internet.</string>
    <string name="never">Never</string>
    <string name="update_events_db">Update events database</string>
    <string name="events_download_up_to_date">Database is already up-to-date</string>
    <string name="events_download_empty">No new events found</string>
    <plurals name="events_download_completed">
        <item quantity="one">Completed downloading %1$d event</item>
        <item quantity="other">Completed downloading %1$d events</item>
    </plurals>
    <string name="menu_aboutoscal">About OSCAL</string>
    <string name="menu_tracks">Tracks</string>
    <string name="menu_sponsors">Sponsors</string>
    <string name="menu_venue">Venue</string>
    <string name="menu_venue_detail">Venue Detail</string>
    <string name="menu_code">Code of Conduct</string>
    <string name="menu_live">Live</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_map">Map</string>
    <string name="menu_day1">Day 1</string>
    <string name="menu_day2">Day 2</string>
    <string name="filter">Filter</string>
    <string name="upcoming_only">Upcoming only</string>
    <string name="no_bookmark">No bookmark.</string>
    <string name="remove_bookmarks">Remove bookmarks</string>
    <plurals name="selected">
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="next">Next</string>
    <string name="next_empty">During OSCAL, the events to come in the next 30 minutes will be shown here.</string>
    <string name="now">Now</string>
    <string name="now_empty">During OSCAL, the events in progress will be shown here.</string>
    <string name="other">Other</string>
    <string name="keynote">Keynote</string>
    <string name="main_track">Main track</string>
    <string name="developer_room">Developer room</string>
    <string name="lightning_talk">Lightning talk</string>
    <string name="certification_exam">Certification Exam</string>
    <string name="search_events">Search events</string>
    <string name="search_settings_description">Events</string>
    <string name="search_hint">Event, track, person</string>
    <string name="no_search_result">No result.</string>
    <string name="error_title">Error</string>
    <string name="event_not_found_error">Unable to load the session details.\nMake sure the database has been updated to the latest version.</string>
    <string name="schedule_loading_error">An error occurred while updating the schedule. Please try again later.</string>
    <string name="search_length_error">The minimum search text length is 3 chars.</string>
    <string name="organizers">Organizers</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_enabled_title">Enable notifications</string>
    <string name="settings_notifications_enabled_summary">If checked, this will notify you of bookmarked upcoming events</string>
    <string name="settings_notifications_vibrate_title">Vibrate</string>
    <string name="settings_notifications_vibrate_summary">Vibrate on notification</string>
    <string name="settings_notifications_led_title">Flash led</string>
    <string name="settings_notifications_led_summary">Blink led on notification</string>
    <string name="settings_notifications_delay_title">Notification time</string>
    <string-array name="settings_notifications_delay_entries">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="settings_notifications_delay_entry_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string name="settings_notifications_delay_summary">Delay before getting notified of an upcoming bookmarked event</string>
    <string name="related_links_header">Related Links</string>
    <string name="add_bookmark">Add to bookmarks</string>
    <string name="remove_bookmark">Remove from bookmarks</string>
    <string name="share">Share</string>
    <string name="add_to_agenda">Add to agenda</string>
    <string name="calendar_not_found">No compatible calendar application found.</string>
    <plurals name="speakers">
        <item quantity="one">Speaker</item>
        <item quantity="other">Speakers</item>
    </plurals>
    <string name="talks_header">Talks</string>
    <string name="more_info">More info</string>
    <string name="room_map">Room map</string>
    <string name="directions">Directions to ULB</string>
    <string name="no_data">No data available.</string>
    <string name="about">About OSCAL</string>
    <string name="about_text"><b>OSCAL</b> (Open Source Conference Albania) is the first annual conference in Albania
        organized to promote software freedom, open source software, free culture and open
        knowledge, a global movement that originally started more than 25 years ago.
\n
\n     The Conference will take place at <b>9 &amp; 10 May 2015</b> in <b>Tirana</b> and will gather free
        libre open source technology users, developers, academics, governmental
        agencies and people who share the idea that software should be free and open
        for the local community and governments to develop and customize to its needs;
        that knowledge is a communal property and free and open to everyone.
      \n\n
        Our mission is educating Albanian youth, and not only, on free and
        open source software, its ideology and the great community behind it.

        \n\nJust like other successful regional conferences <b>OSCAL</b> provides a fertile
        ground to build and enhance networking within the tech community, both in
        the local region and worldwide by being used as a meeting point for a network
        of individuals and companies with the aim of sponsoring and initiating projects
        which benefit the people and taxpayers in Albania and which should also result in
        commercial benefits for the surrounding region.\n \n \n
    "Source Code is available under the Apache 2.0 License" <a href="https://www.apache.org/licenses/LICENSE-2.0 ">https://www.apache.org/licenses/LICENSE-2.0</a>
    \n
    \n
    Based on the  <a href="https://archive.fosdem.org/2014/">FOSDEM</a> Android app
    \n
    \n
    Developed by <a href="http://www.almotech.org/">ALMOTECH</a>.</string>
    <string name="code_of_conduct0">
OSCAL
    </string>
        <string name="code_of_conduct1">Over the next two days we will ask a lot of each other.
        What we discuss, share, build, learn and create together will,
        at times, stretch us to the point of discomfort. Going in, it\'s
        important to know that this is something to look forward to and
        even embrace. The discomfort that comes from stretching ourselves
        beyond what we thought possible makes what we\'re doing at the second
        edition of OSCAL worthwhile. Heck, if everyone could do this work,
        they would — and it wouldn\'t be worth much.
              \n
    \n
            By the end of  the conference
        and beyond (and if we do this right), each one of us will be transformed in
        some small way; each having learned at least one new thing, made at least one
        new friend and changed what we thought we knew for certain about free open source
        culture in Albania and beyond at least once. Learning, connecting and being open
        and adaptable to change, are the things that will most profoundly impact our work,
        our lives and the open knowledge scene as we head into the future. So let\'s all do that!
              \n
    \n
            The
        following is a short list of Participant Responsibilities specific to the conference. They
        were remixed by a similar list by our friends over at the Mozilla Foundation. Keyword here
        is remixed! These are not rules, but rather boundaries of participation during our time
        together so that we all get the most out of it.  \n
    </string>
    <string name="code_of_conduct2">participate</string>
    <string name="code_of_conduct3">The work of changing the world can happen
        only through active participation. Commit to pushing hard to go beyond
        what\'’s easy: embrace a new idea, ask a dumb question, participate at one
        of the open sessions at the workshop room, close your laptop. If the main
        conference hall does not move you, go to the workshop sessions or at one
        of the info booths. It\'s okay to shift - really! You alone get to decide
        what interests you, stretches you and ultimately helps you grow.</string>
    <string name="code_of_conduct4">make room</string>
    <string name="code_of_conduct5">OSCAL participants speak at least Albanian,
        English, German and Greek. We don\'t all understand English fluently. Some
        of us are hard of hearing and visually impaired. When speaking, do it slowly
        and loudly. Check in with others as you go to make sure they understand. Some
        of us have physical limitations that make getting around difficult. Offer open
        structures with the idea of universal access, rather than waiting for special
        requests.  Provide clear information on access.
          \n
    \n
        Make room (literally and metaphorically)
        for all before anyone has to ask. Seek to understand, then to be understood. Practice empathy.
        Assume positive intent.</string>
    <string name="code_of_conduct6">practice respect</string>
    <string name="code_of_conduct7">OSCAL is an event where you can safely be your true self
        (why would you be anything else?) and a time to respect others\' true selves as well
        (even if it bothers you from time to time). Respect their space and freedom and uniqueness,
        as much as our own.
Take care of yourself, body and mind. We only have two days together and they will be long. To learn,
        participate and have fun you need to be at your best. Rest, eat, drink water, laugh a lot.
          \n
    \n
Take care of the space and each other. Pick up trash. Share your power cord.</string>
    <string name="code_of_conduct8">be helpful</string>
    <string name="code_of_conduct9">If you see a problem, try to help. If you can\'t help,
        find someone who can, starting from our awesome  volunteers. Don\'t quietly tolerate
        unacceptable behavior. Stand up for yours!If someone\'s words make you feel unsafe or
        uncomfortable — a comment, a joke, a slide — and can\'t address it with them directly,
        consider involving an intermediary, a volunteer and other people from the organizers crew.
        You will find them at the Open Labs info booth or by email at <a href="mailto:info@openlabs.cc">info@openlabs.cc</a>.
  \n
    \n
If you\'ve made someone feel unsafe or uncomfortable, be open to adjusting your presentation or
        public speech and apologize directly when needed.</string>
    <string name="code_of_conduct10">
    This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 license,remixed from Mozilla Summit 2013</string>
</resources>